--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -29,6 +29,8 @@
 
 	<div id="game-board" class="board clearfix"></div>
 
+	<button id="restart">Reset</button>
+	
 </main>
 <footer class="clearfix">
 
